# rest_api_vehicle

./: .gitignore  manage.py  pyproject.toml
api/: models.py  serializers.py  test_1_user.py  test_2_segment.py  test_3_brand.py  test_4_vehicle.py  urls.py  views.py
api/migrations/: 0001_initial.py
rest_api_vehicle/: asgi.py  settings.py  urls.py  wsgi.py
