[tool.poetry]
name = "rest_api_vehicle"
version = "0.1.0"
description = ""
authors = ["wtkn25 <atrastar72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Django = "^3.1.5"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
